Logger addition for debugging purpose